<resources>
    <string name="app_name">Book Action</string>

    <!--Menuのテキスト-->
    <string name="save_button_text">保存</string>
    <string name="update_button_text">変更</string>

    <!--プロフィール関係-->
    <string name="userName">ユーザーネーム(必須)</string>
    <string name="user_introduction">自己紹介文(150文字以内)</string>
    <string name="no_user_name">取得できませんでした</string>

    <!--本の登録関係-->
    <string name="register_title">本を登録</string>
    <string name="update_title">本の編集</string>
    <string name="register_book_name">本のタイトル</string>
    <string name="register_action_plan">アクションプラン</string>
    <string name="read_date">読んだ日付</string>
    <string name="author_column">著者</string>

    <!--認証関係の文字列-->
    <string name="welcome_app">Book Actionへようこそ</string>
    <string name="google_register_text">Googleで登録・ログイン</string>
    <string name="twitter_register_text">Twitterで登録・ログイン</string>
    <string name="mail_register_text">メールアドレスで登録</string>
    <string name="mail_login_text">メールアドレスでログイン</string>
    <string name="mail_address">メールアドレス</string>
    <string name="password">パスワード(英数字8文字以上)</string>
    <string name="new_register">新規登録</string>
    <string name="login">ログイン</string>

    <!--投稿関係の文字列-->
    <string name="author">著者:%1$s</string>
    <string name="post_text">投稿する</string>
    <string name="comment_input">コメントを記入</string>

    <!--アクションプラン用の文字列-->
    <string name="action_title">タイトル</string>
    <string name="action_title_hint">タイトルを入力</string>
    <string name="action_what">行動した内容</string>
    <string name="action_what_hint">行動した内容を入力</string>
    <string name="action_could">できたこと</string>
    <string name="action_could_hint">できたことを入力</string>
    <string name="action_could_not">課題・改善点</string>
    <string name="action_could_not_hint">課題・改善点を入力</string>
    <string name="action_next">次のアクションプラン</string>
    <string name="action_next_hint">次のアクションプランを入力</string>
    <string name="action_first">最初のアクションプラン</string>
    <string name="date">日付</string>
    <string name="next_action_view">次に実行する行動</string>

    <!--BottomNavigationViewのタイトル-->
    <string name="title_my_page">マイページ</string>
    <string name="title_graph">グラフ</string>
    <string name="title_post">投稿</string>
    <string name="title_settings">設定</string>

    <!--AlertDialogのテキスト-->
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">キャンセル</string>
    <string name="dialog_register_message">登録に成功しました。</string>
    <string name="dialog_delete_message">削除しますか？</string>
    <string name="dialog_update_message">変更しました</string>

    <!--検索用のテキスト-->
    <string name="search_text">本の検索（本のタイトルを入力）</string>

    <!--グラフ用-->
    <string name="graph_last_month">先月</string>
    <string name="graph_this_month">今月</string>
    <string name="graph_last_year">昨年</string>
    <string name="graph_this_year">今年</string>
    <string name="graph_book_count">冊</string>
    <string name="graph_current_year">%1$s年</string>
    <string name="graph_back_year_button">＜</string>
    <string name="graph_next_year_button">＞</string>
    <string name="graph_input">読書数</string>
    <string name="graph_output">行動数</string>
    <string name="graph_reviews">件</string>

    <!--アクティビティー名-->
    <string name="another_user_activity">another.activities.AnotherUserActivity</string>
    <string name="main_activity">activities.MainActivity</string>
    <string name="barcode_button">バーコード検索</string>


    <!--spinner用のテキスト-->
    <string-array name="spinner_text_array">
        <item>登録日が早い順</item>
        <item>登録日が遅い順</item>
    </string-array>

    <!--通知用のテキスト-->
    <string name="notification_text">通知</string>
    <!--&lt;でHTMLタグを書く-->
    <string name="notification_user_text">&lt;b>%1$s&lt;/b>さんがあなたの投稿に%2$sをしました。</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
