<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/book_read_item"
        android:title="@string/title_bookshelf"
        android:icon="@drawable/ic_book"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/graph_item"
        android:title="@string/title_graph"
        android:icon="@drawable/ic_graph"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/library_item"
        android:title="@string/title_post"
        android:icon="@drawable/ic_library"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settings_item"
        android:title="@string/title_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>

</menu>