<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragmentBookshelf">

    <fragment
        android:id="@+id/fragmentBookshelf"
        android:label="@string/title_bookshelf"
        android:name="android.wings.websarva.dokusyokannrijavatokotlin.bookshelf.fragments.BookShelfFragment"
        tools:layout="@layout/fragment_book_shelf" >
    </fragment>

    <fragment
        android:id="@+id/fragmentGraph"
        android:label="@string/title_graph"
        android:name="android.wings.websarva.dokusyokannrijavatokotlin.chart.fragments.ChartSelectFragment"
        tools:layout="@layout/fragment_chart_select" />

    <fragment
        android:id="@+id/fragmentPost"
        android:label="@string/title_post"
        android:name="android.wings.websarva.dokusyokannrijavatokotlin.post.fragments.PostFragment"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/fragmentNotification"
        android:label="@string/notification_text"
        android:name="android.wings.websarva.dokusyokannrijavatokotlin.notification.fragments.NotificationFragment"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/fragmentSettings"
        android:label="@string/title_settings"
        android:name="android.wings.websarva.dokusyokannrijavatokotlin.settings.fragments.SettingsFragment"
        tools:layout="@layout/fragment_settings" >
    </fragment>


</navigation>