<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.fragments.InputActionFragment">

    <TextView
        style="@style/BasicTextView"
        android:id="@+id/actionTitleColumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_title"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <androidx.appcompat.widget.AppCompatEditText
        style="@style/BasicEditText"
        android:id="@+id/actionTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/actionTitleColumn" />

    <TextView
        style="@style/BasicTextView"
        android:id="@+id/actionWhatColumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_what"
        app:layout_constraintTop_toBottomOf="@+id/actionTitleInput"/>

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/BasicMultiLineEditText"
        android:id="@+id/actionWhatInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/actionWhatColumn"/>
    
    <TextView
        style="@style/BasicTextView"
        android:id="@+id/actionCouldColumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_could"
        app:layout_constraintTop_toBottomOf="@+id/actionWhatInput"/>

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/BasicMultiLineEditText"
        android:id="@+id/actionCouldInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/actionCouldColumn"/>

    <TextView
        style="@style/BasicTextView"
        android:id="@+id/actionCouldNotColumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_could_not"
        app:layout_constraintTop_toBottomOf="@+id/actionCouldInput"/>

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/BasicMultiLineEditText"
        android:id="@+id/actionCouldNotInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/actionCouldNotColumn"/>

    <TextView
        style="@style/BasicTextView"
        android:id="@+id/actionNextColumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_next"
        app:layout_constraintTop_toBottomOf="@+id/actionCouldNotInput"/>

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/BasicMultiLineEditText"
        android:id="@+id/actionNextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/actionNextColumn"/>





        


  
</androidx.constraintlayout.widget.ConstraintLayout>