<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".chart.fragments.BarChartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/graphLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableReadBook"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/yearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/chart">

            <TextView
                android:id="@+id/backYearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_tap_bg"
                android:text="@string/graph_back_year_button"
                android:textColor="@color/colorGrey"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/currentYearTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/currentYearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graph_current_year"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nextYearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_tap_bg"
                android:text="@string/graph_next_year_button"
                android:textColor="@color/colorGrey"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/currentYearTextView"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yearLayout"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TableLayout
        android:id="@+id/tableReadBook"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/graphLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/thisMonthRow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:background="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/lastMonthRow"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/thisMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:gravity="center"
                        android:text="@string/graph_this_month"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/thisMonthReadBookCount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toStartOf="@+id/thisMonthReadUnit" />

                    <TextView
                        android:id="@+id/thisMonthReadUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/graph_book_count"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/lastMonthRow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:background="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/thisYearRow"
                app:layout_constraintTop_toBottomOf="@+id/thisMonthRow">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lastMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:gravity="center"
                        android:text="@string/graph_last_month"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/lastMonthReadBookCount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toStartOf="@+id/lastMonthBookUnit" />

                    <TextView
                        android:id="@+id/lastMonthBookUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/graph_book_count"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/thisYearRow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:background="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/lastYearRow"
                app:layout_constraintTop_toBottomOf="@+id/lastMonthRow">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/thisYear"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:gravity="center"
                        android:text="@string/graph_this_year"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/thisYearReadBookCount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toStartOf="@+id/thisYearBookUnit" />

                    <TextView
                        android:id="@+id/thisYearBookUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/graph_book_count"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/lastYearRow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thisYearRow">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lastYear"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:gravity="center"
                        android:text="@string/graph_last_year"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/lastYearReadBookCount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toStartOf="@+id/lastYearBookUnit" />

                    <TextView
                        android:id="@+id/lastYearBookUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/graph_book_count"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </TableRow>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>